# ringbuf

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  classbaudvine_1_1_deque_ring_buf-members.html  classbaudvine_1_1_deque_ring_buf.html  classbaudvine_1_1_deque_ring_buf.js  classbaudvine_1_1_ring_buf-members.html  classbaudvine_1_1_ring_buf.html  classbaudvine_1_1_ring_buf.js  classbaudvine_1_1detail_1_1_iterator-members.html  classbaudvine_1_1detail_1_1_iterator.html  classbaudvine_1_1detail_1_1_iterator.js  classbaudvine_1_1detail_1_1ringbuf_1_1_iterator-members.html  classbaudvine_1_1detail_1_1ringbuf_1_1_iterator.html  classbaudvine_1_1detail_1_1ringbuf_1_1_iterator.js  classes.html  deque__ringbuf_8h_source.html  design-notes.html  dir_17f57914527a2394bff9d068b56ba2b3.html  dir_17f57914527a2394bff9d068b56ba2b3.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_db77e01671fd08b611fd0d2a353b9976.html  dir_db77e01671fd08b611fd0d2a353b9976.js  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  index.html  md__home_runner_work_ringbuf_ringbuf_docs_comparison.html  md__home_runner_work_ringbuf_ringbuf_docs_design.html  menudata.js  namespacebaudvine.html  namespacebaudvine.js  (+11 more)
.github/workflows/: clang-format.yml  cmake.yml  code-style-check.yml  documentation.yml  linter.yml
docs/: Doxyfile  comparison.md  design-notes.md  design.md  index.md  main_page.md
include/baudvine/: base_ringbuf.h  deque_ringbuf.h  flexible_ringbuf.h  ringbuf.h
include/baudvine/ringbuf/: deque_ringbuf.h  dynamic_ringbuf.h  ringbuf.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  related_0.js  searchdata.js
test/: CMakeLists.txt  at_exit.h  black_box.cpp  black_box.h  config.h  examples.cpp  instance_counter.cpp  instance_counter.h  ringbuf_adapter.h  ringbufs.h  test.cpp  test_allocator_elementwise.cpp  test_compiles.cpp  test_compiles_deque.cpp  test_compiles_dynamic.cpp  test_container.cpp  test_container_2.cpp  test_container_alloc_aware.cpp  test_container_alloc_ipc.cpp  test_container_concepts.cpp  test_container_general.cpp  test_container_ranges.cpp  test_container_reversible.cpp  test_container_sequence.cpp  test_dynamic_compiles.cpp  test_dynamic_ringbuf.cpp  test_exception_safety.cpp  test_hello.cpp  test_iterator.cpp  test_iterator_bidi.cpp  test_iterator_deque.cpp  test_iterator_dynamic.cpp  test_iterator_rando.cpp  test_iterator_stability.cpp  test_ringbuf.cpp  test_speed.cpp  test_static_ringbuf.cpp  unflex_ringbuf.h
test/build_tools/: feature_check_ranges.cpp  feature_check_variant.cpp
